# kripton-authenticator

./: Cargo.toml  PKGBUILD  README.md  kripton-authenticator.desktop
src/: main.rs
