[package]
name = "kripton-authenticator"
version = "1.8.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
argon2 = "0.5.2"
zeroize = { version = "1.7", features = ["serde", "alloc"]}
rpassword = "7.3.0"         
directories = "5.0"       
base32 = "0.5"            
chrono = "0.4.31"           
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"        
sha1 = "0.10.6" 
sha2 = "0.10.8"
hmac = "0.12.1"
digest = "0.10.7"           
rand = "0.8"
typenum = "1.17"
thiserror = "1.0"
