[package]
name = "kripton-authenticator"
version = "2.1.9"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
zeroize = { version = "1.8.2", features = ["serde", "alloc"]}
rpassword = "7.4.0"         
directories = "6.0"       
base32 = "0.5.1"            
chrono = "0.4.42"           
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"        
sha1 = "0.10.1" 
sha2 = "0.10.9"
hmac = "0.12.1"
digest = "0.10.7"           
rand = "0.9.2"
typenum = "1.19"
thiserror = "2.0.17"
tempfile = "3.23"
arboard = "3.6.1"
url = "2.5.7"
urlencoding = "2.1.3"
rustyline = "17.0.2"
